@startuml

package persist{
    package dao{
        abstract class DAOFactory{
            + connection: Connection
            + createTaskDAO(): DAOFactory
            + createTaskListServlet ..> TaskFacade: usesDAO(): DAOFactory
        }
        interface TaskDAO{
            + getAllTaskByTaskListServlet ..> TaskFacade: usesId(taskListId: String): Collection<Task>
            + create(task: Task)
            + update(task: Task)
            + delete(id: String)
        }
        interface TaskListDAO{
            + getAllTaskListByUserId(userid: String): Collection<List>
            + create(list: List)
            + update(list: List)
            + delete(id: String)
        }
        package mysql{
            class MySqlDAOFactory{
                + createTaskDAO(): MySqlTaskDAO
                + createTaskListDAO(): MySqlTaskListDAO
            }
            class MySqlTaskDAO{}
            class MySqlTaskListDAO{}
        }
        package postgresql{
            class PostgreSqlDAOFactory{
                + createTaskDAO(): PostgreSqlTaskDAO
                + createTaskListDAO(): PostgreSqlTaskListDAO
            }
            class PostgreSqlTaskDAO{}
            class PostgreSqlTaskListDAO{}
        }
    }
}

package core{
    package facade{
        class TaskFacade{
            + getAllTaskByTaskListId(taskListId: String): Collection<Task>
            + create(label: String, taskList_fk: String)
            + delete(id: String)
        }
        class TaskListFacade{
            + getAllTaskListByUserId(userId: String): Collection<List>
            + create(label: String, user_fk: String)
            + delete(id: String)
        }
    }
    package bean{
        class Task{
            - id: String
            - label: String
            - tasklist_fk: String
        }
        class TaskList{
            - id: String
            - label: String
            - user_fk: String
        }
    }
}

package servlet{
    class TaskListServlet{
        - getAllTaskByListId(id: String)
    }
    class TaskListsServlet{
        - getAllListByUserId(id: String)
    }
}

DAOFactory <|-- MySqlDAOFactory
DAOFactory <|-- PostgreSqlDAOFactory

DAOFactory --> "1" TaskDAO
DAOFactory --> "1" TaskListDAO

TaskDAO <|.. MySqlTaskDAO
TaskListDAO <|.. MySqlTaskListDAO

MySqlTaskDAO <.. MySqlDAOFactory: creates
MySqlTaskListDAO <.. MySqlDAOFactory: creates

PostgreSqlTaskDAO <.. PostgreSqlDAOFactory: creates
PostgreSqlTaskListDAO <.. PostgreSqlDAOFactory: creates

TaskDAO <|.. PostgreSqlTaskDAO
TaskListDAO <|.. PostgreSqlTaskListDAO

TaskFacade ..> Task: uses
TaskListFacade ..> TaskList: uses

TaskFacade --> "1" DAOFactory
TaskListFacade --> "1" DAOFactory

TaskFacade --> "1" TaskDAO
TaskListFacade --> "1" TaskListDAO

TaskListServlet ..> TaskFacade: uses
TaskListsServlet ..> TaskListFacade: uses

@enduml